--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
-    "name": "joris/tuto",
-    "autoload": {
-        "psr-4": {
-            "Tuto\\": "class/"
+    "name": "joris/traca",
+    "autoload":{
+        "psr-4":{
+            "App\\":"class/"
         }
     },
     "require": {}
-    
 }
