--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,7 +1,1 @@
-browser.id=Chrome.INTEGRATED
-copy.src.files=false
-copy.src.on.open=false
-copy.src.target=
-index.file=index.php
-run.as=LOCAL
-url=http://localhost/Tuto/
+url=http://localhost/
